<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculador">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="172dp"
        android:layout_height="206dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/nueva"
        app:srcCompat="@drawable/tonin"
        tools:layout_editor_absoluteY="463dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="284dp"
        android:layout_height="260dp"
        android:layout_marginStart="76dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/stylo"
        android:text="@string/textocalculador"
        android:textColor="#4D5656 "
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nueva"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="558dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/boton"
        android:text="@string/nuevabusqueda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/volver"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/boton"
        android:text="@string/volver"
        app:layout_constraintBottom_toTopOf="@+id/nueva"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>